--- a/package.json
+++ b/package.json
@@ -1,4 +1,16 @@
 {
   "name": "nebula-ui-kit",
-  "version": "0.0.0"
+  "version": "0.0.0",
+  "main": "./css/nebula.css",
+  "scripts": {
+    "start": "npm run build -- --watch",
+    "build": "node-sass ./scss/nebula.scss ./css/nebula.css"
+  },
+  "devDependencies": {
+    "css-loader": "^3.5.3",
+    "mini-css-extract-plugin": "^0.9.0",
+    "node-sass": "^4.14.0",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.2.1"
+  }
 }
